# uncertain-rs

./: .cargo-mutants.toml  .clippy.toml  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  MIGRATION_GUIDE.md  README.md  crap_baseline.json  deny.toml  justfile
.github/: dependabot.yml
.github/actions/build-project/: action.yml
.github/actions/quality-checks/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml
benches/: performance_benchmarks.rs
examples/: README.md  climate_modeling.rs  common_subexpression_optimization.rs  error_handling.rs  gps_navigation.rs  medical_diagnosis.rs  parallel_sampling.rs  sensor_processing.rs
examples/optimizations/: common_subexpression_optimization.rs  graph_optimization.rs
specs/: 01-dev-workflow-hardening.md  02-validated-constructors.md  03-remove-sampling-eq.md  04-seedable-rng.md  05-rand-distr-sampling.md  06-total-graph-evaluation.md  07-sound-constant-folding.md  08-effective-cse.md  09-variance-policy.md  10-bounded-caches.md  11-property-based-testing.md  12-serde-support.md  13-more-distributions.md  14-bench-regression-ci.md  15-docs-and-meta.md  16-release-automation.md  17-clippy-pedantic-cleanup.md  18-statistics-validation.md  19-deflake-existing-tests.md  README.md
src/: cache.rs  computation.rs  distributions.rs  error.rs  hypothesis.rs  lib.rs  rng.rs  statistics.rs  traits.rs  uncertain.rs
src/operations/: arithmetic.rs  comparison.rs  logical.rs  mod.rs
tests/: cache_optimization_tests.rs  parallel_sampling_tests.rs  seeded_rng_tests.rs
