[package]
name = "uncertain-rs"
version = "0.1.0"
edition = "2024"
authors = ["Oleksandr Prokhorenko <warbles.lieu_04@icloud.com>"]
license = "MIT"
description = "A Rust library for uncertainty-aware programming, implementing the approach from 'Uncertain<T>: A First-Order Type for Uncertain Data'"
homepage = "https://github.com/minikin/uncertain-rs"
repository = "https://github.com/minikin/uncertain-rs"
keywords = ["uncertainty", "probability", "statistics", "monte-carlo", "sprt"]
categories = ["science", "algorithms", "mathematics"]

[dependencies]
rand = "0.9.2"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "performance_benchmarks"
harness = false

[[example]]
name = "graph_optimization"
path = "examples/optimizations/graph_optimization.rs"

[[example]]
name = "common_subexpression_optimization"
path = "examples/optimizations/common_subexpression_optimization.rs"
