[package]
name = "uncertain-rs"
version = "0.3.0"
edition = "2024"
rust-version = "1.88.0"
authors = ["Oleksandr Prokhorenko <warbles.lieu_04@icloud.com>"]
license = "MIT"
description = "A Rust library for uncertainty-aware programming, implementing the approach from 'Uncertain<T>: A First-Order Type for Uncertain Data'"
homepage = "https://github.com/minikin/uncertain-rs"
repository = "https://github.com/minikin/uncertain-rs"
keywords = ["uncertainty", "probability", "statistics", "monte-carlo", "sprt"]
categories = ["science", "algorithms", "mathematics"]

[lints.clippy]
# Pedantic/nursery stay opt-in (see .cargo/config.toml aliases) until
# specs/17-clippy-pedantic-cleanup.md — turning them on here fails CI on
# ~150 pre-existing findings out of this spec's scope.
all = { level = "warn", priority = -1 }

[dependencies]
rand = "0.10.0"
uuid = { version = "1.18.1", features = ["v4"] }
thiserror = "2.0.17"
rayon = { version = "1.11.0", optional = true }
rand_chacha = "0.10.0"
rand_distr = "0.6.0"

[features]
default = []
parallel = ["rayon"]

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "performance_benchmarks"
harness = false

[[example]]
name = "graph_optimization"
path = "examples/optimizations/graph_optimization.rs"

[[example]]
name = "common_subexpression_optimization"
path = "examples/optimizations/common_subexpression_optimization.rs"
